bin_PROGRAMS = pwi2html
pwi2html_SOURCES = pwi.cpp abstractpwiexporter.cpp xhtmlpwiexporter.cpp binarypwiparser.cpp pwidocument.cpp paragraph.cpp configuration.cpp openofficepwiexporter.cpp zip.c ioapi.c

# set the include path found by configure
INCLUDES= $(all_includes)

# the library search path.
pwi2html_LDFLAGS = $(all_libraries) 
noinst_HEADERS = abstractpwiexporter.h xhtmlpwiexporter.h binarypwiparser.h pwidocument.h paragraph.h configuration.h openofficepwiexporter.h zip.h ioapi.h
